--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html
+class="dark"
   lang="en"
   th:fragment="parent(content,title,script)"
   xmlns:th="http://www.thymeleaf.org"
@@ -14,20 +15,12 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class=" h-screen w-full dark:bg-gray-900 dark:text-white">
     <!-- commona header -->
 
-    <ul class="p-4">
-      <li>
-        <a data-th-href="@{'/home'}">Home</a>
-      </li>
-      <li>
-        <a data-th-href="@{'/services'}">Services</a>
-      </li>
-      <li>
-        <a data-th-href="@{'/about'}">About</a>
-      </li>
-    </ul>
+   <div data-th-replace="navbar :: navbar">
+
+   </div>
 
     <!-- main content -->
     <div class="p-4">
