--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,6 +19,13 @@
     <div
       class="flex md:order-2 gap-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
     >
+    <!-- light/dark buttn -->
+        <button
+        id="theme_change_button"
+        class="bg-gray-200 px-3 py-2 rounded-lg dark:bg-gray-600"
+        >
+            <i class="fa-solid fa-circle-half-stroke"></i> <span>Light</span>
+        </button>
       <a
         data-th-href="@{'/login'}"
         type="button"
