--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-class="dark"
+class="light"
   lang="en"
   th:fragment="parent(content,title,script)"
   xmlns:th="http://www.thymeleaf.org"
@@ -12,8 +12,18 @@ class="dark"
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
+    
       rel="stylesheet"
     />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
   </head>
   <body class=" h-screen w-full dark:bg-gray-900 dark:text-white">
     <!-- commona header -->
@@ -32,6 +42,7 @@ class="dark"
     <footer class="p-4">Footer: Learn Code With Durgesh</footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script data-th-src="@{'js/script.js'}"></script>
     <th:block data-th-replace="${script}"></th:block>
   </body>
 </html>
