added user signup function with repo , service

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -25,7 +25,7 @@ class="light"
     />
 
   </head>
-  <body class=" h-screen w-full dark:bg-gray-900 dark:text-white">
+  <body class=" h-screen w-full dark:bg-gray-900 bg-gray-200 dark:text-white">
     <!-- commona header -->
 
    <div data-th-replace="navbar :: navbar">
@@ -39,7 +39,7 @@ class="light"
     <!-- flow bite content -->
 
     <!-- common footer -->
-    <footer class="p-4">Footer: Learn Code With Durgesh</footer>
+    <!-- <footer class="p-4">Footer: Learn Code With Durgesh</footer> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script data-th-src="@{'js/script.js'}"></script>
