validation added with @valid BlindingResult

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -917,6 +917,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .text-center {
   text-align: center;
 }
