--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -20,7 +20,7 @@
   </svg>
   <span class="sr-only">Info</span>
   <div>
-    <span class="font-medium">>></span>
+    <span class="font-medium"></span>
     <span data-th-text="*{content}"></span>
   </div>
   <th:block th:text="${@sessionHelper.removeMessage()}"></th:block>
