--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,14 +8,104 @@
   </head>
   <body>
     <div id="content">
-      <h1>Welcome to Login page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-        ratione!
-      </p>
+      <div class="grid grid-cols-12 mt-4">
+        <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
+        <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+          <div
+            class="block p-6 border-t-[10px] border-green-700 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-green-700 dark:hover:bg-gray-700"
+          >
+            <!-- message -->
+            <div data-th-replace="message::messageBox"></div>
+            <h5
+              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+            >
+              Login up
+            </h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400">
+              Start managing contacts on cloud ...
+            </p>
+            <div class="text-red-600 text-center my-3" th:if="${param.error}">
+              Invalid username or password.
+            </div>
+            <div
+              class="text-green-600 text-center my-3"
+              th:if="${param.logout}"
+            >
+              You have been logged out.
+            </div>
+            <!-- form -->
+            <form 
+            method="post"
+            data-th-action="@{'/authenticate'}"
+            class="mt-5"
+            >
+              <!-- email -->
+              <div class="mb-5">
+                <label
+                  for="email"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                  >Email</label
+                >
+                <input
+                  name="email"
+                  type="email"
+                  id="email"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="name@flowbite.com"
+                  required
+                />
+                <!-- <p
+                data-th-if="${#fields.hasErrors('email')}"
+                data-th-errors="*{email}"
+                class="text-red-600 px-1 py-2"
+              > email in proper format is required</p> -->
+              </div>
+
+              <!-- password -->
+              <div class="mb-5">
+                <label
+                  for="password"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                  >New Password</label
+                >
+                <input
+                  name="password"
+                  type="password"
+                  id="password"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  required
+                />
+                <!-- <p
+                data-th-if="${#fields.hasErrors('password')}"
+                data-th-errors="*{password}"
+                class="text-red-600 px-1 py-2"
+              >Password is require</p> -->
+              </div>
+
+              <!-- about -->
+
+              <!-- buttons -->
+              <div class="mb-2">
+                <button
+                  type="submit"
+                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+                >
+                  Signup
+                </button>
+                <button
+                  type="reset"
+                  class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-red-500 rounded-lg border border-red-200 hover:bg-red-400 hover:text-black-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-red-800 dark:text-red-400 dark:border-red-600 dark:hover:text-white-400 dark:hover:bg-red-700"
+                >
+                  Reset
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
     <script>
-      console.log("Home page");
+      console.log("Login page");
     </script>
   </body>
 </html>
