google login enable

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -15,6 +15,7 @@ class="light"
       rel="stylesheet"
     />
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+    <link rel="stylesheet" data-th-href="@{'/css/google.css'}" />
    
     <!-- font awesome -->
     <link
