--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -100,6 +100,14 @@
                 </button>
               </div>
             </form>
+            <div class="social-buttons-container flex justify-center mt-10">
+              <a
+                class="px-3 py-2 login-with-google-btn"
+                data-th-href="@{'/oauth2/authorization/google'}"
+              >
+                Login With Google</a
+              >
+            </div>
           </div>
         </div>
       </div>
