--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is user dashboard page</h1>
+    <h1 data-th-text="${user.email}"></h1>
     <a data-th-href="@{'/do-logout'}">Logout</a>
 </body>
 </html>
