--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -1,11 +1,10 @@
 <div
-    data-th-if="${session.message}"
-    data-th-object="${session.message}"
-  data-th-fragment="messageBox"
+  data-th-if="${session.message}"
+  data-th-object="${session.message}"
+  data-th-fragment="messagebox"
   data-th-classappend="*{'text-'+type+'-800 border border-'+type+'-300 rounded-lg bg-'+type+'-50 dark:bg-gray-800 dark:text-'+type+'-400 dark:border-'+type+'-800'}"
   class="flex items-center p-4 mb-4 text-sm"
   role="alert"
-
 >
   <svg
     class="flex-shrink-0 inline w-4 h-4 me-3"
@@ -20,8 +19,8 @@
   </svg>
   <span class="sr-only">Info</span>
   <div>
-    <span class="font-medium"></span>
     <span data-th-text="*{content}"></span>
   </div>
+
   <th:block th:text="${@sessionHelper.removeMessage()}"></th:block>
 </div>
