--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,31 +1,37 @@
-<nav data-th-fragment="navbar" class="bg-white dark:bg-gray-900 shadow-sm">
+<nav
+  data-th-fragment="navbar"
+  class="bg-white border-gray-900 shadow-sm dark:bg-gray-900"
+>
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
+    <!-- brand -->
     <a
-      data-th-href="@{'/'}"
+      data-th-src="@{'/'}"
       class="flex items-center space-x-3 rtl:space-x-reverse"
     >
       <img
         data-th-src="@{'/images/telephone.png'}"
-        class="h-8 rounded-full"
+        class="h-8 shadow rounded-full"
         alt="Flowbite Logo"
       />
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >SCM 2.0
-      </span>
+        >SCM2.0</span
+      >
     </a>
+
+    <!-- end of brand logo -->
     <div
-      class="flex md:order-2 gap-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
+      class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
     >
-    <!-- light/dark buttn -->
-        <button
+      <!-- dark light theme button -->
+      <button
         id="theme_change_button"
         class="bg-gray-200 px-3 py-2 rounded-lg dark:bg-gray-600"
-        >
-            <i class="fa-solid fa-circle-half-stroke"></i> <span>Light</span>
-        </button>
+      >
+        <i class="fa-solid fa-circle-half-stroke"></i> <span>Light</span>
+      </button>
       <a
         data-th-href="@{'/login'}"
         type="button"
@@ -34,12 +40,14 @@
         Login
       </a>
       <a
-        data-th-href="@{'/signup'}"
+        data-th-href="@{'/register'}"
         type="button"
         class="text-white bg-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
       >
-        Sign up
+        Signup
       </a>
+
+      <!-- icons to open menu on small screen -->
       <button
         data-collapse-toggle="navbar-cta"
         type="button"
@@ -65,6 +73,8 @@
         </svg>
       </button>
     </div>
+
+    <!-- menus -->
     <div
       class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
       id="navbar-cta"
@@ -75,7 +85,7 @@
         <li>
           <a
             data-th-href="@{'/home'}"
-            class="cursor-pointer block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
+            class="block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
             aria-current="page"
             >Home</a
           >
@@ -83,14 +93,14 @@
         <li>
           <a
             data-th-href="@{'/about'}"
-            class="cursor-pointer block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >About</a
           >
         </li>
         <li>
           <a
             data-th-href="@{'/services'}"
-            class="cursor-pointer block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Services</a
           >
         </li>
