--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,49 +4,56 @@
   th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}"
 >
   <head>
-    <title>Home page</title>
+    <title>Signup</title>
   </head>
   <body>
     <div id="content">
       <div class="grid grid-cols-12 mt-4">
         <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
         <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+          <!-- 6 ki spance le rhi hai -->
+          <!-- card -->
           <div
             class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-700"
           >
-          <!-- message -->
-           <div data-th-replace="message::messageBox"></div>
+            <!-- message here -->
+
+            <div data-th-replace="message::messagebox"></div>
+
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-              Sign up
+              Signup Here
             </h5>
-            <p class="font-normal text-gray-700 dark:text-gray-400">
+            <p class="font-normal text-gray-400 dark:text-gray-400">
               Start managing contacts on cloud ...
             </p>
-            <!-- form -->
-            <form 
-            data-th-action="@{'/do-register'}" 
-            class="mt-2"
-            method="post"
-            data-th-object="${userForm}"
-            novalidate
+
+            <!-- this is  form -->
+            <form
+              data-th-action="@{'/do-register'}"
+              method="post"
+              data-th-object="${userForm}"
+              class="mt-5"
+              novalidate
             >
-              <!-- name -->
-              <div class="mb-5">
+              <!-- name  -->
+
+              <div class="mb-3">
                 <label
-                  for="name"
+                  for="email"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                   >Name</label
                 >
                 <input
                   type="text"
                   id="name"
-                  th:field="*{name}"
+                  data-th-field="*{name}"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Enter the name"
+                  placeholder="Enter here"
                   required
                 />
+
                 <p
                   data-th-if="${#fields.hasErrors('name')}"
                   data-th-errors="*{name}"
@@ -55,104 +62,102 @@
                   Name is required
                 </p>
               </div>
-              <!-- email -->
-              <div class="mb-5">
+              <!-- email field -->
+              <div class="mb-3">
                 <label
-                  for="name"
+                  for="email"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                   >Email</label
                 >
                 <input
+                  data-th-field="*{email}"
                   type="email"
                   id="email"
-                  th:field="*{email}"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Enter the Email"
+                  placeholder="name@flowbite.com"
                   required
                 />
                 <p
-                data-th-if="${#fields.hasErrors('email')}"
-                data-th-errors="*{email}"
-                class="text-red-600 px-1 py-2"
-              > email in proper format is required</p>
+                  data-th-if="${#fields.hasErrors('email')}"
+                  data-th-errors="*{email}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
               </div>
-              <!-- phone number -->
-              <div class="mb-5">
-                <label
-                  for="phoneNumber"
-                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Phone Number</label
-                >
-                <input
-                  type="number"
-                  id="phoneNumber"
-                  th:field="*{phoneNumber}"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Enter the Phone Number"
-                  maxlength="10"
-                  minlength="10"
-                  required
-                />
-                <p
-                data-th-if="${#fields.hasErrors('phoneNumber')}"
-                data-th-errors="*{phoneNumber}"
-                class="text-red-600 px-1 py-2"
-              >Phone number is require</p>
-              </div>
-              <!-- password -->
-              <div class="mb-5">
+              <!-- password field -->
+              <div class="mb-3">
                 <label
                   for="password"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Password</label
+                  >New Password</label
                 >
                 <input
+                  data-th-field="*{password}"
                   type="password"
                   id="password"
-                  th:field="*{password}"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Enter the password"
                   required
                 />
                 <p
-                data-th-if="${#fields.hasErrors('password')}"
-                data-th-errors="*{password}"
-                class="text-red-600 px-1 py-2"
-              >Password is require</p>
+                  data-th-if="${#fields.hasErrors('password')}"
+                  data-th-errors="*{password}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
+              <!-- Phone field -->
+              <div class="mb-3">
+                <label
+                  for="phone"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                  >Contact Number</label
+                >
+                <input
+                  data-th-field="*{phoneNumber}"
+                  type="text"
+                  id="phone"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  required
+                />
+
+                <p
+                  data-th-if="${#fields.hasErrors('phoneNumber')}"
+                  data-th-errors="*{phoneNumber}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
               </div>
 
-              <!-- about -->
-              <div class="mb-5">
+              <!-- about textarea -->
+              <div class="mb-3">
                 <label
                   for="about"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >About</label
+                  >Write something about yourself</label
                 >
                 <textarea
+                  data-th-field="*{about}"
                   id="about"
-                  th:field="*{about}"
                   rows="6"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Enter the About"
-                  required
+                  class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="Write here..."
                 ></textarea>
+
                 <p
                   data-th-if="${#fields.hasErrors('about')}"
                   data-th-errors="*{about}"
                   class="text-red-600 px-1 py-2"
                 ></p>
               </div>
-              <!-- buttons -->
-              <div class="mb-2">
+              <!-- button -->
+
+              <div class="mb-3 flex justify-center space-x-3">
                 <button
                   type="submit"
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+                  class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800"
                 >
-                  Signup
+                  Singup
                 </button>
                 <button
                   type="reset"
-                  class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-red-500 rounded-lg border border-red-200 hover:bg-red-400 hover:text-black-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-red-800 dark:text-red-400 dark:border-red-600 dark:hover:text-white-400 dark:hover:bg-red-700"
+                  class="px-3 py-2 rounded bg-orange-800 hover:bg-orange text-white dark:bg-orange-800 dark:hover:bg-orange-800"
                 >
                   Reset
                 </button>
@@ -162,9 +167,8 @@
         </div>
       </div>
     </div>
-
     <script>
-      console.log("Home page");
+      console.log("Signup page");
     </script>
   </body>
 </html>
