--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -3,20 +3,21 @@
   lang="en"
   th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}"
 >
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-th-text="${user.name}+' |  Dashboard'">
+  <head>
+    <title data-th-text="${loggedInUser.name}+' |  Dashboard'">
       Profile Page
     </title>
-</head>
-<body>
-  <div id="content">
-    <!-- sidebar -->
+  </head>
+  <body>
+    <div id="content">
+      <!-- sidebar -->
+
       <!-- user is logged in : sidebar -->
-      <div th:if="${user}">
+
+      <div th:if="${loggedInUser}">
         <div data-th-replace="~{user/sidebar :: sidebar}"></div>
       </div>
+
       <div class="sm:pl-64 pt-20" style="height: 1000px">
         <div class="flex justify-center flex-col items-center">
           <h1 class="text-5xl">Welcome to Dashbaord page</h1>
@@ -27,8 +28,9 @@
         </div>
       </div>
     </div>
+
     <script>
       console.log("this is profile page");
     </script>
-</body>
+  </body>
 </html>
