--- a/src/main/resources/templates/user/user_navbar.html
+++ b/src/main/resources/templates/user/user_navbar.html
@@ -5,28 +5,25 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <button
-      data-drawer-target="logo-sidebar"
-      data-drawer-toggle="logo-sidebar"
-      aria-controls="logo-sidebar"
-      type="button"
-      class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-    >
-      <span class="sr-only">Open sidebar</span>
-      <svg
+  <a
+  data-th-href="@{'/user/profile'}"
+  type="button"
+  class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+    
+  >
+  <svg
         class="w-6 h-6"
         aria-hidden="true"
         fill="currentColor"
         viewBox="0 0 20 20"
         xmlns="http://www.w3.org/2000/svg"
       >
-        <path
-          clip-rule="evenodd"
-          fill-rule="evenodd"
-          d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
-        ></path>
-      </svg>
-    </button>
+      <path
+      clip-rule="evenodd"
+      fill-rule="evenodd"
+      d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
+    ></path></svg>
+ </a>
     <!-- brand -->
     <a
       data-th-src="@{'/'}"
@@ -42,6 +39,7 @@
         >SCM2.0</span
       >
     </a>
+
     <!-- end of brand logo -->
     <div
       class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
@@ -58,8 +56,9 @@
         type="button"
         class="hidden md:flex text-white bg-green-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
       >
-        <span data-th-text="${user.name}"></span>
+        <span data-th-text="${loggedInUser.name}"></span>
       </a>
+     
       <a
         data-th-href="@{'/do-logout'}"
         type="button"
@@ -67,6 +66,7 @@
       >
         Logout
       </a>
+
       <!-- icons to open menu on small screen -->
       <button
         data-collapse-toggle="navbar-cta"
@@ -93,9 +93,10 @@
         </svg>
       </button>
     </div>
+
     <!-- menus -->
     <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      class="items-center z-50 justify-between hidden w-full md:flex md:w-auto md:order-1"
       id="navbar-cta"
     >
       <ul
@@ -130,13 +131,14 @@
             >Contact</a
           >
         </li>
+
         <li>
           <a
             data-th-href="@{'/user/profile'}"
             type="button"
             class="md:hidden text-white bg-green-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           >
-            <span data-th-text="${user.name}"></span>
+            <span data-th-text="${loggedInUser.name}"></span>
           </a>
         </li>
         <li>
