working bug fix

--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -17,7 +17,7 @@
       <div class=" flex justify-center   pt-16"> 
         <div class="" style="width: max-content">
           <div class="grid grid-cols-10">
-            <div class="col-span-3"></div>
+            <div class="col-span-3 pt-4"></div>
             <div class="col-span-12 md:col-span-6 ">
               <div
                 class="card block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
