--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -13,13 +13,13 @@
     <div th:if="${loggedInUser}">
       <div data-th-replace="~{user/sidebar :: sidebar}"></div>
     </div>
-    <div class=" flex justify-center   pt-16">
-      <div class="" style="width: max-content">
+    <div class=" flex justify-center   pt-16 ">
+      <div class="max-w-3 h-auto" >
         <div class="grid grid-cols-10">
           <div class="col-span-3 pt-4"></div>
           <div class="col-span-12 md:col-span-6 ">
             <div
-              class="card block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+              class="card z-40 block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
               <div data-th-replace="message::messagebox"></div>
               <h1 class=" pt-2 text-2xl font-semibold p-5">Add New Contact</h1>
               <p class="text-gray-500 p-5">
@@ -145,14 +145,18 @@
                 </div>
 
                 <!-- contact image field -->
-                <div class="mb-3">
+                <div class="mb-3 ">
                   <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="large_size">Contact
                     Image</label>
                   <input
-                  data-th-field="*{contactImagFile}"
+                  id="image_file_input"
+                    data-th-field="*{contactImagFile}"
                     class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                    id="large_size" type="file" />
+                    type="file" />
+                    <img src="" id="uploadImage" class="hidden"/>
+                  
                 </div>
+                
 
                 <!-- favorite checkbox -->
 
@@ -181,6 +185,7 @@
     </div>
   </div>
 
+  <script data-th-src="@{'/js/admin.js'}"></script>
   <script>
     console.log("this is profile page");
   </script>
